spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ section {
 }
 
 .banner {
-    height: 60vh;
+    height: 55vh;
     background-color: black;
     oveflow: hidden;
     position: relative;
@@ -75,7 +75,7 @@ section {
 }
 
 .about {
-    height: 40vh;
+    height: 45vh;
     background-color: #5EA890;
     position: relative;
 }
